overflow issue fixed

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
     background-color: rgb(255, 255, 255);
     font-family: 'Tillana', cursive;
+    overflow: hidden;
 }
 
 main{
@@ -8,7 +9,7 @@ main{
     margin: 0 auto;
     height: 100vh;
     max-width: 375px;
-    border: 1px black solid;
+
 
 }
 
@@ -27,12 +28,12 @@ label{
 
 button{
     width: 155px;
-    height: 50px;
     font-size: 1.3rem;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     border-radius: 10px;
     border: 1px black solid;
+    padding: 5px;
 }
 
 #length{
